refactor App files to main.tsx and index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,19 @@
 @import './styles/global.css';
 
 html {
-    background-color: var(--background-color);
-    font-family: 'Outfit', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--background-color);
+  font-family: 'Outfit', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+@media (max-width: 375px) {
+  body {
+    padding: 20px;
+  }
 }
